[project]
name = "scrc_ms_asignar_priorizcion"
version = "0.0.1"
description = "Microservicio para la gestión de la asignación de priorización"
authors = [{ name = "Dairo Carrasquilla", email = "cdairo2204@gmail.com" }]
requires-python = ">=3.12"
license = { file = "LICENSE" }

[tool.fastapi]
entrypoint = "src.main:app"
